--- a/网站index.html
+++ b/网站index.html
@@ -16,11 +16,11 @@
         }
         p {
             font - size: 24px;
-            color: red;/*这里将文字颜色设为红色，你可以换成其他颜色，如blue、green等 */
+            color: red;/*这里将文字颜色改变
         }
     </style>
 </head>
 <body>
-    <p>又梦到你了，醒来发现是梦，好想立刻见到你，把你紧紧抱在怀里。</p>
+    <p>又梦到你了，醒来发现是梦，好想立刻见到你，把你紧紧抱在怀里，真的真的。</p>
 </body>
 </html>
